# chess-bot

./: README.md
chess-client/: index.html  index.js  package-lock.json  package.json  style.css
chess-engine/: CMakeLists.txt  main.cpp
chess-engine/include/chess-engine/: board.h  color.h  move.h  piece.h
chess-engine/src/: board.cpp  main.cpp
